[package]
name = "dotl"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A simple CLI todo tracker written in Rust"
readme = "README.md"
repository = "https://github.com/smit4k/dotl"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
